--- a/hello_world/Makefile
+++ b/hello_world/Makefile
@@ -1,4 +1,5 @@
 build:
+	source "$(HOME)/dev/github.com/emscripten-core/emsdk/emsdk_env.sh" && \
 	emcc hello.c -s WASM=1 -o dist/hello.html
 
 http:
